# python-project-50

./: .gitingore  Makefile  README.md  gendiff.py  pyproject.toml
.github/workflows/: README.md
gendiff/: __init__.py  booleans_cleaner.py  cli.py  data_comparer.py  data_loader.py  data_parser.py  data_reader.py  diff_creator.py  diff_generator.py  file_reader.py  format_selector.py  gendiff.py  generate_diff.py
gendiff/formatters/: formatter.py  json.py  json_formatter.py  plain.py  plain_formatter.py  stylish.py  stylish_formatter.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_generate_diff.py
tests/fixtures/: expected5.json  file1.txt
